[package]
name = "periodic_do"
version = "0.2.0"
edition = "2021"
description = "Run task periodically until it reaches a terminal state"
homepage = "https://github.com/qwfy/periodic_do"
repository = "https://github.com/qwfy/periodic_do"
authors = ["Incomplete"]
license = "MIT"


[dependencies]
# utilities
chrono = { version = "0.4" }
tracing = "0.1.41"
thiserror = "1.0"

tokio = { version = "1.15", features = ["sync", "time", "rt"] }
async-trait = "0.1"
